test: 优化测试代码并修复静态导入和冗余代码
- 移除未使用的静态导入（如 `assertNull`, `any`, `anyLong` 等）
- 将 `list.get(0)` 替换为 `list.getFirst()` 以提升可读性
- 简化测试辅助方法，移除不必要的参数和类型声明
- 修复 `safeSnippet` 方法，移除未使用的 `maxChars` 参数并硬编码限制为 2000 字符
- 在 `SpaController` 中简化空字符串检查，移除冗余的 `null` 判断
- 统一使用 `assertEquals(Boolean.TRUE, ...)` 替代 `assertTrue(Boolean.TRUE.equals(...))`
- 清理测试中的冗余变量和未使用的导入，减少代码复杂度
- 修复 Gradle 构建脚本中的类型声明，使用简化的 `ArrayList`